# dmfm

./: .gitignore  ATD2022_AveragingModel_final_version.ipynb  ATD2022_DynamicMatrixFactorModel.ipynb  ATD_helper.R  DMFM_paper.ipynb  README.md  models.py
atd2022/: .gitlab-ci.yml  LICENSE  README.md  challenge.ipynb  environment.yml  leaderboard.ipynb  pyproject.toml  setup.cfg
atd2022/docs/: conf.py  index.rst
atd2022/docs/_static/: predictability_leaderboard.html  predictability_rankings.csv  sprint2_leaderboard.html  sprint3_leaderboard.html  sprint4_leaderboard.html
atd2022/docs/_templates/autosummary/: module.rst
atd2022/src/atd2022/: __init__.py  backtest.py  cameo.py  io.py  leaderboard.py
atd2022/src/atd2022/cameo_data/: eventcodes.csv  fips.csv
atd2022/src/atd2022/forecasters/: __init__.py  adapter.py  exceptions.py  naive.py  types.py
atd2022/src/atd2022/metrics/: __init__.py  _base.py  evaluate.py  ordinal.py  types.py  voting.py
atd2022/src/atd2022/metrics/intermittent/: __init__.py  cfe_based.py  eda.py  spec.py
atd2022/src/atd2022/viz/: __init__.py  compare.py  comparison_panels.py  nstep_metrics.py  quadrant.py
atd2022/tests/: conftest.py  strategies.py  test_compute_nstep_metrics.py  test_exponentially_weighted_moving_average.py  test_forecaster_adapters.py  test_historical_forecast.py  test_io.py  test_metrics.py  test_naive.py  test_simple_moving_average.py  test_splitter.py  test_viz.py  test_viz_compare_panel.py  test_viz_nstep_metrics.py
