[metadata]
name = atd2022
description = Algorithms for Threat Detection 2022 challenge.
version = attr: atd2022.__version__
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Doug Mercer
author_email = dgm161@arl.psu.edu

[options]
zip_safe = False
package_dir =
    = src
packages = find:
platforms = any
include_package_data = True
install_requires =
    bokeh
    holoviews[recommended]
    matplotlib>=3.3.2
    numpy>=1.20
    pandas>=1.1.3,<1.4  # statsmodel raises FutureWarning: pandas.Int64Index is deprecated
    panel
    seaborn
    sktime>=0.8.1,<0.12
    tqdm>=4.63.0
    typing-extensions; python_version < '3.8'
python_requires = >=3.7,<3.10

[options.packages.find]
where = src

[options.package_data]
atd2022 = py.typed, *.csv.gz, cameo_data/*.csv

[options.extras_require]
dev =
    black
    flake8<4  # https://github.com/tholo/pytest-flake8/issues/81
    hypothesis
    ipykernel
    ipywidgets<=7.7.1
    isort
    mypy
    nb-clean
    nbqa
    pandas-stubs<=1.2.0.62
    pydocstyle
    pytest<7  # Avoid "Flake8Item is an Item subclass and should not be a collector..."
    pytest-flake8
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
leaderboard =
    plotly
all =
    %(dev)s
    %(docs)s

[tool:pytest]
junit_family = xunit2
addopts = -v --durations=0 --doctest-modules
filterwarnings =
    ignore::DeprecationWarning
testpaths =
	tests
    src/atd2022

[flake8]
max-line-length = 88
ignore = E203,E225,W503
exclude =
    .git
    __pycache__
    .ipynb_checkpoints
    docs/source/conf.py
    build
    dist

[pydocstyle]
convention = numpy
add_ignore = D105

[mypy]
allow_redefinition = True
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
exclude = (?x)(
    ^build/.*
  )

[mypy-atd2022.leaderboard]
disallow_untyped_calls = False
